--- a/erosa4/css/main.css
+++ b/erosa4/css/main.css
@@ -4,7 +4,7 @@
 	margin:25px auto;
 	color:gray;
 	background-color: #f2f2f2;
-	font-family: Pacifico;
+	font-family: 'Pacifico', cursive;
 }
 
 .container p{
